--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ width: 482px;
 }
 .content p {
   color: #d1d1dd;
-  font-size: 19px;
+  font-size: 15px;
   margin-bottom: 50px;
   height: 69px;
   width: 442px;
@@ -80,14 +80,15 @@ width: 482px;
 }
 
 .circle1{
-  width: 32%;
-  height: 514px;
-  background-color: #282834;
-  position: absolute;
-  left: 557px;
-  border-radius: 100%;
-  bottom: -65px;
+   background-color: #282834;
+   position: absolute;
   top: 14%;
+  height: 500px;
+ width: 500px;
+ border-radius: 100%;
+  box-shadow: 5px 5px 25px black;
+ position: absolute;
+  left: 589px;
 }
 
 .image{
@@ -131,8 +132,12 @@ background-color: transparent;
   color: #7bff00;
   font-weight: lighter;
   text-decoration: none;
+  background-color: transparent;
 }
 
+.secondcontent div{
+  background-color: transparent;
+}
 .secondcontent div i {
   color: #7bff00;
   margin-top: 20px;
@@ -140,6 +145,7 @@ background-color: transparent;
   padding: 10px 20px 10px 20px;
   border-radius: 50%;
   background: #2c2b38;
+
   
   
 }
